--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header #title {
     color: #E53170;
 }
 main {
-    max-width: 1000px;
+    max-width: 1200px;
     width: 100%;
     margin: auto;
 }
@@ -30,28 +30,36 @@ main #par {
     text-align: center;
     margin-bottom: 30px;
 }
+#container {
+    width: 1200px;
+}
 .card {
+    width: 30%;
     box-sizing: content-box;
     background-color: #0F0E17;
-    border: 10px solid white;
+    border: 15px solid white;
 }
 .img-card {
-    width: 120px;
+    width: 100px;
 }
+/* margine sinistro di 24px per riempire spazio tra img e div */
 .caption-contain {
-    margin: 20px 40px 20px 15px;
+    margin: 18px 40px 18px 24px;
 }
 .name {
+    width: 168px;
     text-transform: uppercase;
     color: white;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 }
 .caption {
+    width: 147px;
     display: inline-block;
     color: white;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 }
 .card-mail {
+    width: 182px;
     display: block;
     color: #3EB7EC;
 }
