--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ main {
     margin: auto;
 }
 main #par {
+    width: 1170px;
+    margin: auto;
     text-align: center;
     margin-bottom: 30px;
 }
@@ -34,8 +36,7 @@ main #par {
     width: 1200px;
 }
 .card {
-    width: 30%;
-    box-sizing: content-box;
+    width: 33.3%;
     background-color: #0F0E17;
     border: 15px solid white;
 }
